--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    font: 14px "Century Gothic", Futura, sans-serif;
+    margin: 20px;
+    background-color: #57bd91;
+  }
+  
+  ol, ul {
+    padding-left: 30px;
+  }
+  
+  .board-row:after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+  
+  .main-title{
+    color: white;
+    font-size: 60px;
+    font-family:fantasy;
+    margin-bottom: 20px;
+  }
+  .title{
+    color: black;
+    font-size: large;
+    margin: auto;
+    width: 50%;
+  }
+  .yellow-square{
+    background: rgb(218, 218, 104);
+  }
+  .green-square{
+    background: rgb(85, 148, 94);
+  }
+  .black-square{
+    background: rgb(126, 126, 126);
+  }
+  .square {
+    border: 1px solid black;
+    float: left;
+    font-size: 34px;
+    font-weight: bold;
+    line-height: 80px;
+    height: 80px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 80px;
+    
+  }
+  
+  .square:focus {
+    outline: none;
+  }
+  
+  
+  .main {
+    margin:auto;
+    width: 100%;
+    text-align: center;
+    align-content: center;
+  }
+  
+  .letter-input{
+   display: inline-block;
+  }
+  
