--- a/src/index.css
+++ b/src/index.css
@@ -5,26 +5,61 @@ body {
   }
   
   ol, ul {
-    padding-left: 30px;
+    list-style-type: none;
+    padding-inline-start: 0px;
   }
   
+  .list-item{
+    display: inline-block;
+    padding: 5px;
+  }
+  .yellow-button{
+    border-color: rgb(0, 0, 0);
+    border: 1px solid;
+    background-color: rgb(218, 218, 104);
+  }
+
+  .black-button{
+    border-color: rgb(105, 105, 105);
+    border-style: solid;
+    background-color: rgb(126, 126, 126);
+  }
+  .remove-button{
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    margin: auto;
+  }
   .board-row:after {
     clear: both;
     content: "";
     display: table;
   }
   
+  .hint-box{
+    
+    height: 15px;
+    width: 40px;
+    background-color: #57bd91;
+    font-size: 20px;
+    text-align: left;
+  }
+  .hint{
+    margin: auto;
+    background-color: white;
+    width: 60%;
+    text-align: left;
+    padding: 10px;
+  }
   .main-title{
     color: white;
-    font-size: 60px;
-    font-family:fantasy;
+    font-size: 40px;
+    font-family:'Courier New', Courier, monospace;
     margin-bottom: 20px;
   }
   .title{
     color: black;
     font-size: large;
-    margin: auto;
-    width: 50%;
   }
   .yellow-square{
     background: rgb(218, 218, 104);
